k8s/kustomize/deployment/vote-bot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-bot
  namespace: emojivoto
  labels:
    app.kubernetes.io/name: vote-bot
    app.kubernetes.io/part-of: emojivoto
    # app.kubernetes.io/version: v11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-bot
      # version: v11
  template:
    metadata:
      labels:
        app: vote-bot
        # version: v11
    spec:
      containers:
      - name: vote-bot
        image: bravecobra/emoji-votebot:stable
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 200m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 200Mi
