k8s/kustomize/deployment/emoji.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emoji
  namespace: emojivoto
  labels:
    app.kubernetes.io/name: emoji
    app.kubernetes.io/part-of: emojivoto
    # app.kubernetes.io/version: v11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emoji-svc
      # version: v11
  template:
    metadata:
      labels:
        app: emoji-svc
        # version: v11
    spec:
      serviceAccountName: emoji
      containers:
      - name: emoji-svc
        image: registry.localhost:5000/bravecobra/emojisvc:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: grpc
        - containerPort: 88
          name: prom
        resources:
          limits:
            cpu: 200m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: emoji-svc
  namespace: emojivoto
spec:
  selector:
    app: emoji-svc
  ports:
  - name: grpc
    port: 80
    targetPort: 80
  - name: prom
    port: 88
    targetPort: 88
