k8s/kustomize/deployment/voting.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting
  namespace: emojivoto
  labels:
    app.kubernetes.io/name: voting
    app.kubernetes.io/part-of: emojivoto
    # app.kubernetes.io/version: v11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-svc
      # version: v11
  template:
    metadata:
      labels:
        app: voting-svc
        # version: v11
    spec:
      serviceAccountName: voting
      containers:
      - name: voting-svc
        image: registry.localhost:5000/emojivoting:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: grpc
        - containerPort: 88
          name: prom
        resources:
          requests:
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: voting-svc
  namespace: emojivoto
spec:
  selector:
    app: voting-svc
  ports:
  - name: grpc
    port: 80
    targetPort: 80
  - name: prom
    port: 88
    targetPort: 88
