k8s/kustomize/deployment/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: emojivoto
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: emojivoto
    # app.kubernetes.io/version: v11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-svc
      # version: v11
  template:
    metadata:
      labels:
        app: web-svc
        # version: v11
    spec:
      serviceAccountName: web
      containers:
      - name: web-svc
        image: registry.localhost:5000/bravecobra/emojiui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: emojivoto
spec:
  type: ClusterIP
  selector:
    app: web-svc
  ports:
  - name: http
    port: 80
    targetPort: 80
